--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mui/styled-engine-sc": "^6.0.0-alpha.6",
+    "@mui/x-data-grid": "^6.18.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "firebase": "^10.6.0",
+    "pg": "^8.11.3",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
@@ -19,6 +25,7 @@
     "react-toastify": "^9.1.3",
     "react-twitch-embed": "^3.0.1",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.1",
     "twitch-player": "^2.0.2",
     "web-vitals": "^2.1.4"
   },
